# forgedsidian

./: .editorconfig  .gitattributes  .gitignore  AI-CONTRIBUTORS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  Trunk.toml  deny.toml  index.html  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: audit.yml  ci.yml
branding/: README.md
docs/: README.md
docs/architecture/adr/: 0001-rust-workspace-layout.md  0002-tauri-leptos-gui-runtime.md  0003-wgpu-graph-renderer.md  0004-calendar-as-pkm-entity.md
docs/architecture/c4/: C4-L1-system-context.md  C4-L2-containers.md
docs/audits/: AUDIT-LICENCE.md  LICENCE-AUDIT-REPORT.md  LICENCE-QUICK-CHECK.md  SBOM-native.spdx.json  SBOM-wasm.spdx.json
docs/development/: methodology.md  testing-workflow.md
docs/security/: threat-model.md
forge-canvas/: CHANGELOG.md  Cargo.toml  README.md
forge-canvas/src/: abcde.rs  canvas.rs  error.rs  hit.rs  item.rs  lib.rs
forge-core/: CHANGELOG.md  Cargo.toml  README.md
forge-core/src/: error.rs  event.rs  format.rs  frontmatter.rs  id.rs  lib.rs  link.rs  note.rs
forge-editor/: CHANGELOG.md  Cargo.toml  README.md
forge-editor/src/: error.rs  frontmatter.rs  lib.rs  links.rs  parser.rs
forge-graph/: CHANGELOG.md  Cargo.toml  README.md
forge-graph/benches/: graph_bench.rs
forge-graph/src/: error.rs  graph.rs  layout.rs  lib.rs  query.rs
forge-renderer/: CHANGELOG.md  Cargo.toml  README.md
forge-renderer/src/: camera.rs  gpu.rs  graph_pipeline.rs  lib.rs  types.rs
forge-renderer/src/shaders/: edge.wgsl  node.wgsl
forge-ui/: CHANGELOG.md  Cargo.toml  README.md
forge-ui/src/: app.rs  lib.rs  settings.rs  tab_manager.rs
forge-ui/src/components/: canvas_view.rs  command_palette.rs  folder_tree.rs  graph_view_svg_legacy.rs  mod.rs  options_menu.rs  sidebar.rs  tab_bar.rs  tags_panel.rs  toolbar.rs
forge-ui/src/components/editor/: markdown.rs  mod.rs  tests.rs  wikilink.rs
forge-ui/src/components/graph_view/: colors.rs  events.rs  gpu.rs  mod.rs  simulation.rs  view.rs
forge-ui/src/ipc/: file_ops.rs  graph.rs  mod.rs  tags.rs  vault_ops.rs
forge-vault/: CHANGELOG.md  Cargo.toml  README.md
forge-vault/benches/: vault_bench.rs
forge-vault/src/: audit.rs  error.rs  graph_builder.rs  index.rs  indexing.rs  lib.rs  manifest.rs  scan.rs  storage.rs  store.rs  watcher.rs
forge-vault/tests/: integration.rs
scripts/: README.md  prepare_icons.py
src-tauri/: CHANGELOG.md  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  scan.rs  tags.rs  vault_ops.rs
src-tauri/src/commands/file_ops/: create.rs  delete.rs  mod.rs  move_ops.rs  read.rs
src-tauri/tests/: commands.rs
