[package]
name        = "forge-core"
description = "Shared types, domain events, stable IDs and format primitives for Forgedsidian."
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace     = true
serde_json.workspace = true
uuid.workspace      = true
chrono.workspace    = true
