[package]
name        = "forge-renderer"
description = "GPU-accelerated graph renderer using wgpu (instanced circles + edges)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
# GPU abstraction — WebGPU on native (Vulkan/DX12/Metal), WebGL2 fallback on WASM
wgpu.workspace = true

# Struct → raw bytes for GPU buffers
bytemuck.workspace = true

# Linear algebra (Mat4, Vec2, Vec3) — lightweight, no_std compatible
glam.workspace = true

# Logging
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "OffscreenCanvas",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
