[package]
name        = "forge-vault"
description = "Note storage, full-text index (Tantivy) and metadata search for Forgedsidian."
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
forge-core   = { path = "../forge-core" }
forge-graph  = { path = "../forge-graph" }
thiserror.workspace  = true
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
tracing.workspace    = true
tantivy.workspace    = true
uuid.workspace       = true
chrono.workspace     = true
notify.workspace     = true
hmac.workspace       = true
sha2.workspace       = true
rand.workspace       = true
hex.workspace        = true
dunce.workspace      = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vault_bench"
harness = false
